--- a/Rapport/content/preamble.tex
+++ b/Rapport/content/preamble.tex
@@ -27,7 +27,7 @@
 \setcounter{tocdepth}{3} % Antal lag i indholdsfortegenlse.
 \setcounter{secnumdepth}{5} % Antal lag i sektioner.
 \usepackage[toc,page]{appendix} % appendices
-
+\usepackage{gensymb}
 \usepackage{chngcntr}
 \counterwithin{figure}{section}
 \counterwithin{table}{section}
