--- a/Rapport/content/koordinattransformation.tex
+++ b/Rapport/content/koordinattransformation.tex
@@ -1,8 +1,11 @@
 \section{Koordinattransformation}
 \label{sec:koordinattransformation}
+
 De kartesiske koordinater \(P_k=[x, y, z]\) skal transformeres til sværiske koordinater \(P_s=[\rho \text{ ; } \phi \text{ ; } \theta]\), hvor \(\phi\) og \(\theta\) bruges som vinkelbestemmelserne for hhv. tilt og pan og \(\rho\) er afstanden fra PTS til duen som funktion af tiden.
 Positionbestemmelsen som funktion af tiden for det kartesiske koordinatset er udredt i afsnit \ref{subsubsec:para}.
-Idet vinklerne skal bestemmes i forhold til PTS's rotationscenter og ikke koordinatsystemets origo, skal PTS's rotationscenter trækkes, \(PTS=[\text{0 ; 0,45 ; 19,2}]\). Koordinattransformation tager udgangspunkt i de kartisiske koordinater givet i ligning \ref{eq:pf:vektorparabel3d1}. 
+Idet vinklerne skal bestemmes i forhold til PTS's rotationscenter og ikke koordinatsystemets origo, skal PTS's rotationscenter trækkes, \(PTS=[\text{0 ; 0,45 ; 19,2}]\). 
+\subsection{Kartisk koordinater}
+Koordinattransformation tager udgangspunkt i de kartisiske koordinater givet i ligning \ref{eq:pf:vektorparabel3d1}. 
 \begin{align}
 \begin{split}
 { P }_{ c }\left( t \right) &=Pos\left( t \right) -PTS
@@ -28,9 +31,7 @@ Før koordinattransformationen fra kartesiske til sværiske koordinater vises et
 \end{figure}
 
 
-
-
-
+\subsection{Sværisk koordinater}
 Transformationen fra kartesiske koordinater til sværiske koordinater gøres ud for nedenstående ligning.
 \begin{align}
 \begin{split}
