--- a/Rapport/content/problemformulering.tex
+++ b/Rapport/content/problemformulering.tex
@@ -20,7 +20,7 @@ enten ”High House” eller ”Low House”, og med skud fra hver af de otte st
 cirkelperiferien. Dette projekt er afgrænset til et enkelt tilfælde - afskydning fra ”High-House” med pan-and-tilt systemet placeret på station 4.\todo[author=Anders]{Sidste sætning skal omformuleres.}\\
 
 Jævnfør reglerne for ES, skal duer/mål passere target crossing point (TCS) som er 
-placeret i 4,57 [m] over origo. (0; 0; 4.57). Fejlmargin for passagen er \(\pm\)0,45 [m]. 
+placeret i 4,57 [m] over origo. (0 ; 0 ; 4.57). Fejlmargin for passagen er \(\pm\)0,45 [m]. 
 Målene skal desuden flyve 50 - 52 [m].  High house er placeret 20,11 [m] fra TCS, i en 
 højde af 3,05 [m]. 
 %Da luftmodstanden er negligerbar kan parablen (2. grads polynomium) findes ved at indsætte de kendte punkter. 
@@ -35,7 +35,7 @@ Herunder er parablen vist i et
 \label{fig:HH2D_para}
 \end{figure}
 ~\\[10pt]
-Målet bliver affyret med en hastighed på 34.589 \([\frac{m}{s}]\), i en vinkel på \(9.103^{\circ}\) ift. xy-
+Målet bliver affyret med en hastighed på 34,589 \([\frac{m}{s}]\), i en vinkel på \(9,103^{\circ}\) ift. xz-
 planet. Set ovenfra bevæger målet sig som set på figur \ref{fig:para_in_xy_plane}. 
 Figuren ses nedslagspunktet fra High-House, der er i alt 52 [m] startpositionen samt 
 PTS placering i punktet B. 
@@ -108,7 +108,7 @@ y(x) = \tan \theta x - \frac{gx^2}{2(\cos \left( \theta \right)  v_0)^2} + 3,05
 \label{eq:pf:y(x)2}
 \end{equation}
 Det er givet at målet skal passere TCS som er placeret i en højde på 4,57 [m], 20,11 [m] fra HH. 
-Desuden skal målet bevæge sig 50 - 52 [m], i de videre beregninger 52 [m]. Det giver koordinatsættene \((20,11 ; 4,57)\) og \((52 ; 0)\). Vha. disse bestemmes \(\theta\) og \(v_0\) til:\footnote{Ved \(g = 9,82[m/{s}^{2]}\)}
+Desuden skal målet bevæge sig 50 - 52 [m], i de videre beregninger 52 [m]. Det giver koordinatsættene (20,11 ; 4,57) og (52 ; 0). Vha. disse bestemmes \(\theta\) og \(v_0\) til:\footnote{Ved \(g = 9,82[m/{s}^{2]}\)}
 \todo[inline, author=Michael]{Måske giver det ikke mening med alle de decimaler, da det er udregnet med g = 9,82 - men jeg ved heller ikke hvor jeg skal finde en mere præcis måling af g?}
 \begin{eqnarray}
 \theta &=& 9,103 \degree \\
@@ -157,7 +157,7 @@ t_{nedslag} = 1,523 [s]
 
 \subsubsection{Parabel i 3 dimensioner}
 \label{subsubsec:para}
-Nu omskrives parablen fundet i \ref{eq:pf:vektorparabel2} til x,y,z koordinater. 
+Nu omskrives parablen fundet i ligning \ref{eq:pf:vektorparabel2} til x,y,z koordinater. 
 Grundplanet er x,z og højden er givet ved y. Dvs. at \(y(t) = y_{2D}(t)\) og at \(x(t)\) samt \(z(t)\) afhænger af \(x_{2D}(t)\) samt vinklen \(\alpha\). 
 \(\alpha\) er givet ved vinklen mellem parablen projekteret ned på x,z planet (som på figur \ref{fig:para_in_xy_plane}) og y aksen. 
 \todo[inline, author=Michael, color=blue! 50]{Kan også skrives som vinklen mellem parablen og x,z planet?}
