--- a/Rapport/content/app_DCmotor.tex
+++ b/Rapport/content/app_DCmotor.tex
@@ -163,7 +163,7 @@ hvilket giver ligningerne \ref{eq:Rm_0} og \ref{eq:Lm_0}.
 Effektafsættelsen \(P_{avg}\) i en modstand R, påført en vekselspænding med amplituden V, givet ved ligning \ref{eq:effekt}.
 \todo[inline]{Kildehenvisning til effektformel}
 \begin{equation}
-	P_{avg}=\frac{\left(\frac{V}{\sqrt{2}}\right)^2}{R}
+	P_{avg}=\frac{\left(V_{rms}\right)^2}{R}=\frac{\left(\frac{V}{\sqrt{2}}\right)^2}{R}
 	\label{eq:effekt}
  \end{equation}
 \subsubsection{Fremgangsmåde}
@@ -426,7 +426,7 @@ For hver måling bestemtes hældningerne \(\alpha_{op}\) og \(\alpha_{ned}\) vha
 og ud fra dette er gennemsnitsaccelerationerne blevet fundet til
 \(\alpha_{op}=49,3\) \([\frac{\text{rad}}{\text{s}}]\) og \(\alpha_{ned}=-69,1\) \([\frac{\text{rad}}{\text{s}}]\).
 Med disse værdier er inertimomentet beregnet vha. ligning \ref{eq:Jrotor}, og friktionskraftmomentet vha. ligning \ref{eq:Tf1}.
-De beregnede værdier er hhv. \(J_m=8.26\cdot10^{-4}\) \([\text{kg}\cdot{\text{m}^2}]\) og \(\|T_f\|=0,0571\) \( [\text{N} \cdot \text{m}]\).
+De beregnede værdier er hhv. \(J_m=8.26\cdot10^{-4}\) \([\text{kg}\cdot{\text{m}^2}]\) og \(\left| { T }_{ f } \right| =0,0571\) \( [\text{N} \cdot \text{m}]\).
 \subsubsection{Diskussion}
 At \(V_{EMF}\) aftager lineært fremfor eksponentielt indikerer,
 at den viskøse friktion er lav i forhold til Coulomb-friktionen.
@@ -434,5 +434,5 @@ Den lineære approksimation der i fremgangsmåden benyttes er derfor anvendelig,
 og giver et nøjagtigt billede af den tilstedeværende friktion samt rotorens inertimoment.
 \subsubsection{Konklusion}
 Rotorens inertimoment er bestemt til \(J_m=8,26\cdot10^{-4}\) \([\text{kg}\cdot{\text{m}^2}]\).
-Friktionskraftmomentet er bestemt til \(\|T_f\|=0,0571\) \( [\text{N} \cdot \text{m}]\).
+Friktionskraftmomentet er bestemt til \(\left| { T }_{ f } \right| =0,0571\) \( [\text{N} \cdot \text{m}]\).
 \subsection{Opsummering af DC motorparameter}
