--- a/Rapport/content/PTS.tex
+++ b/Rapport/content/PTS.tex
@@ -3,8 +3,8 @@
 For at opnå den optimale respons, skal reguleringen tage højde for, at Pan \& Tilt-motorerne møder modstand i form af
 Pan \& Tilt-rammernes inertimoment. Inertimomentet kan bestemmes ved kendskab til rammernes
 masse og dimensioner. Beregningen tager udgangspunkt i den simplificerede model skitseret i figur \ref{fig:inerti_PTS}.
-På figuren er rammernes enkelte længder markeret, og de er målt til \({L_{1}} =0,292 [m]\),
-\({L_{2}} =0,280 [m]\), \({L_{3}}= 0,42 [m]\), \({L_{4}} =0,246 [m]\), \({L_{pro}}=0,04 [m]\).
+På figuren er rammernes enkelte længder markeret, og de er målt til \({L_{1}} =0,292\) [m],
+\({L_{2}} =0,280\) [m], \({L_{3}}= 0,42\) [m], \({L_{4}} =0,246\) [m], \({L_{pro}}=0,04\) [m].
 \begin{figure}[!th]
 \centering
 \begin{tikzpicture}[scale=0.8]
