--- a/Rapport/content/koordinattransformation.tex
+++ b/Rapport/content/koordinattransformation.tex
@@ -26,7 +26,7 @@ Før koordinattransformationen fra kartesiske til sværiske koordinater vises et
 \begin{tikzpicture}[scale=4]
 \include*{./graphics/3d_in_xyz_plane}
 \end{tikzpicture}
-\caption[Sværisk koordinatsystem til koordinattransformation]{Viser duens placering i det sværiske rum som funktion af  \(\phi\) og \(\theta\) samt \(\rho\).}
+\caption[Sværisk koordinatsystem til koordinattransformation]{Viser duens placering i det sværiske rum som funktion af  \(\phi\), \(\theta\) og \(\rho\).}
 \label{fig:thetaphi_degree}
 \end{figure}
 
