--- a/Rapport/content/forkortelser.tex
+++ b/Rapport/content/forkortelser.tex
@@ -2,3 +2,22 @@
 
 ES = English Skeet \\
 PTS = Pan and Tilt System
+
+\subsection*{Huske liste}
+\begin{itemize}
+\item Tallene skal stå kommaspereret.
+\item \todo[inline,author=Anders]{Mikael, vil du ikke lige tjekke op det der står i sec:4. Jeg er i tvivl om B. Jeg har kigget andre steder, hvor der står vi skal bruge den viskøse friktion og ikke kb eller kt.}
+\end{itemize}
+
+
+\subsection*{Mangler at blive laver/skrevet}
+\begin{itemize}
+\item Problemformulering skal færdiggøres. 
+\item Diskussion
+\item Kontrollerdelen
+\item Teoretisk bestemmelse af PTS inertimoment. 
+\item Konklusion
+\item Forord
+\item Indledning
+
+\end{itemize}
