sektionshenvisning til ligninger

--- a/Rapport/content/preamble.tex
+++ b/Rapport/content/preamble.tex
@@ -31,6 +31,7 @@
 \usepackage{chngcntr}
 \counterwithin{figure}{section}
 \counterwithin{table}{section}
+\counterwithin{equation}{section}
 
 %%%%%%% FIGURES %%%%%%%
 \usetikzlibrary{positioning} % in the preamble
