Tilføjet nye sektion: FPGA og Mikrokontroller

--- a/Rapport/master_doc.tex
+++ b/Rapport/master_doc.tex
@@ -21,6 +21,8 @@
 \include{./content/PTS}
 \include{./content/koordinattransformation}
 \include{./content/kontrollerdesign}
+\include{./content/Mikrocontroller}
+\include{./content/FPGA}
 
 
 
