--- a/Rapport/content/koordinattransformation.tex
+++ b/Rapport/content/koordinattransformation.tex
@@ -12,13 +12,13 @@ Koordinattransformation tager udgangspunkt i de kartisiske koordinater givet i l
 \\
 &=\left( \begin{matrix} x\left( t \right) -0 \\ y\left( t \right) -0,45 \\ z\left( t \right) -19,2 \end{matrix} \right) 
 \\ 
-&=\left( \begin{matrix} 32,851\cdot t-19,2 \\ -{ 4,91\cdot t }^{ 2 }+5,473\cdot t+3,05-0,45 \\ 9,34\cdot t+5,5-19,2 \end{matrix} \right) 
-\\
+%&=\left( \begin{matrix} 32,851\cdot t-19,2 \\ -{ 4,91\cdot t }^{ 2 }+5,473\cdot t+3,05-0,45 \\ 9,34\cdot t+5,5-19,2 \end{matrix} \right) 
+%\\
 &=\left( \begin{matrix} 32,851\cdot t-19,2 \\ -{ 4,91\cdot t }^{ 2 }+5,473\cdot t+2,6 \\ 9,34\cdot t-13,7 \end{matrix} \right) 
 \label{eq:pf:vektorparabel3d1}
 \end{split}
 \end{align}
-
+\todo[author=Anders]{Stedfunktion }
 Før koordinattransformationen fra kartesiske til sværiske koordinater vises et grafisk overblik af \(\phi\) og \(\theta\) samt \(\rho\), figur \ref{fig:thetaphi_degree}. Grundet PTS offset fra ligning \ref{eq:pf:vektorparabel3d1}, er origo for det særiske koordinatsystem, origo af PTS to rotationsakser. 
 
 \begin{figure}[!th]
