Tilføjet FPGA blokdiagram og nikolajs .sty (.tex) til taskdiagrammer.

--- a/Rapport/content/FPGA.tex
+++ b/Rapport/content/FPGA.tex
@@ -1,2 +1,13 @@
 \section{FPGA}
 \label{sec:FPGA}
+
+
+\begin{figure}[!th]
+\centering
+\begin{tikzpicture}[node distance = 5 cm,scale=1]
+\include*{./graphics/FPGA_blok}
+\end{tikzpicture}
+\caption[tekst i indholdsfortegnelsen]{figurtekst.}
+\label{fig:FPGA_blok}
+\end{figure}
+\todo[author=Anders,inline]{Jeg skal lige have tjekket op med nikolaj omkring forbindelsen til Decoder til output decoder.}
