--- a/Rapport/master_doc.tex
+++ b/Rapport/master_doc.tex
@@ -1,4 +1,5 @@
 \input{./content/preamble}
+\input{./content/task_diagram_styles_v2}
 \begin{document}
 \pagenumbering{Roman}
 \include{./content/forside}
