--- a/Rapport/content/FPGA.tex
+++ b/Rapport/content/FPGA.tex
@@ -1,2 +1,21 @@
 \section{FPGA}
 \label{sec:FPGA}
+
+\todo[inline]{Mikkel: Er slet ikke færdigt, så lad venligst være med at rette eller andet.}
+FPGA'en er leddet mellem microcontrolleren og motorene på PTS. 
+Kommunikationen mellem FPGA og microcontroller skal ske ved hjælp af SPI. 
+FPGA'en skal producere PWM signal til motorerne på PTS og skal kunne tælle motorenes rotationer. 
+FPGA'en er i projeket et BASYS board \footnote{DIGILENT BASYS 2}, der programmeres ved brug af VHDL.
+
+\subsection{Struktur}
+Det er forsøgt at bygge funktionaliteter op ved at skrive generiske komponenter. 
+
+\subsection{PWM}
+Der skal fra FPGA'en genereres PWM signaler til at styre motorerne på PTS.
+\subsubsection*{Valg af PWM frekvens}
+Det ønskedes at have en PWM frekvens, der ikke ligger i det hørbare område. 
+Det ønskedes også at have en god opløsning på PWM. 
+Ved 11 bit og brug af BASYS boardets interne clock på 50 MHz bliver PWM frekvensen passende høj:
+\begin{equation}
+  \frac{2^{11}}{50 MHz} = 24.41 KHz 
+\end{equation}
