--- a/Rapport/content/problemformulering.tex
+++ b/Rapport/content/problemformulering.tex
@@ -12,7 +12,7 @@ Bolden bevæger sig i et 3D-rum med negligerbar luftmodstand. \\
 Systemets input er 60 kartesisiske koordinatsæt (x,y,z) per sekund. Hvor disse 
 koordinater stammer fra, er uden for projektafgrænsningen. \\
 
-Systemet dimensioneres til brug ifbm. en konkurrence i ES. En skitse over 
+Systemet dimensioneres til brug ifm. en konkurrence i ES. En skitse over 
 banen ses på figur \ref{fig:ES}. Det kartesiske koordinatsystem har origo i halvcirklens centrum, 
 som indtegnet 
 nederst på figuren. I ES skal rammes serier af duer/mål der afskydes fra 
