--- a/Rapport/content/PTS.tex
+++ b/Rapport/content/PTS.tex
@@ -23,7 +23,7 @@ rotation, derfor tænker jeg at tilts vægt bare skal lægges til \({L_{3}}\).}
 \todo[inline, author=Michael, color=blue! 50]{Jeg har regnet mig frem til at tilt bevæger sig indenfor for disse grænser:  \(-0,54 \degree < tilt < 12,15 \degree\). (Dette gælder hvis PTS origin er placeret 0,4 m over Station 4, hvilket er vores udgangspunkt). }
 
 \subsection{Beregning af Pan \& Tilt-rammernes inertimoment}
-Den teoritiske beregning er foretaget ud fra følgende simplificeringer:
+Den teoritiske beregning er foretaget ud fra følgende antagelser og simplificeringer:
 \begin{itemize}
 \item Aluminimumsprofilen, 40x40L, har en massefylde på \(\rho=1,5\) [kg/m], \citep[Kap. 2 side. 4]{alu_profil_desitet}.
 \item Rammerne simplificeres som bestående af tynde stænger, således at hver ramme har to stænger, hvis bidrag
@@ -57,9 +57,43 @@ Med ovenstående formler er det muligt at finde Pan og Tilt-rammernes teoritiske
 \end{align}
 
 \todo[inline,author=Anders-Mikael]{Tilt påvirker pan..\\ størst når tilt er vandret\\ mindst når tilt er lodret\\ og sådan påvirker geringen set fra motoren.}
+Tilt-rammens indflydelse på inertimomentet som pan-motoren skal rotere, er afhængig af tilt-rammens vinkel.
+Når tilt-rammen er lodret er bidraget til pan-inertimomentet mindst, jf. ligning \ref{eq:punktmasse_para}, fordi afstanden
+af to af stængerne til rotationsaksen (pan) er mindst. Ligeledes vil bidraget til pan-inertimomentet være størst når tilt-rammen er vandret.
+Dette giver en kobling mellem pan og tilt, hvilket er uønsket under designet af reguleringssløjfen\todo[inline,author=Mikael]{Reference til krav om at vi ikke vil have kobling mellem pan og tilt}. En simplificering er således at inkludere bidraget i modellen for pan som en konstant.
+Man kan argumentere for, at denne konstant bør være gennemsnittet af bidragene for hele bevægelsen.
+Denne ville kunne tilnærmes ud fra den ideelle responskurve for tilt-systemet, der kan beregnes ud fra den faste parabel, som gives som input.
+Værdien ville således være baseret på ét specifikt parabelinput. En anden tilgang kunne være at vælge minimum-bidraget, og dermed
+have en værdi der er nøjagtig for de tilt-vinkler, der er tæt på lodret, og mere og mere unøjagtig jo mere vandret tilit-vinklen er.
+Sidstnævnte tilgang vælges, fordi tilt-vinklen i lerdueskydningen er tæt på lodret
+\todo[inline,author=Mikael]{Påstanden er uden belæg. Indsæt reference til tilt-vinklen som funktion af tiden evt.},
+og antagelsen om konstant bidrag til inertimoment derfor er nøjagtig.
 
-Inertimomenterne er beregnet i ligningerne \ref{eq:inerti_tilt_pan}.
-Systemets gearing gør dog at inertimomenterne, som motorerne belastes med, er mindre.
+Tilt-rammens bidrag til inertimomentet for pan bestemmes derfor ud fra, at to af tilt-rammens "stænger" er parallele med
+rotationsaksen, og at de to stænger med længden \({L_{2}}\) er vinkelret på den, samt at de roterer om den.
+Med ligningerne \ref{eq:punktmasse_para} og \ref{eq:stang}
+kan tilt-rammens bidrag til pan-inertimomentet altså beregnes vha ligning \ref{eq:tiltOnPan}.
+\begin{align}
+%\begin{equation}
+I_{pan,tilt_{min}}=2\cdot{}\left(\frac{1}{12}\cdot{}\rho\cdot{}L_{2}^3
++\rho\cdot{}\left(L_1-2\cdot{}L_{pro}\right)\left(\frac{L_2-L_{pro}}{2}\right)^2\right)
+\\
+&=0,0146464 \text{ [kg m$^2$]}
+\label{eq:tiltOnPan} 
+%\end{equation}
+\end{align}
+Inertimomentet på pan-aksen er derfor givet ved summationen af pan-rammens inertimoment og tilt-rammens inertimoment,
+som angivet i ligning \ref{eq:pan_inerti}.
+\begin{align}
+%\begin{equation}
+{ I }_{ pan,1.1 } &= I_{ pan,1 }+I_ { pan,tilt_{ min} }
+\\&=0,0462172 \text{ [kg m$^2$]}
+\label{eq:pan_inerti} 
+%\end{equation}
+\end{align}
+
+Inertimomentet for tilt er beregnet i ligning \ref{eq:inerti_tilt_pan}, mens inertimomentet for pan er beregnet i ligning \label{eq:pan_inerti}.
+Systemets gearing gør dog at inertimomenterne som motorerne belastes med, er mindre.
 Gearingen i EMG30-motoren er i forholdet 30:1, mens gearingen til rammerne er i forholdet 1:3.
 Ligning \ref{eq:gearing0} giver forholdet mellem det reflekterede inertimoment \(I_r\) (som motoren belastes med)
 og inertimomentet \(I\) efter en gearing med forholdet \(N\) \citep{gear_inerti}.
@@ -74,6 +108,6 @@ I ligningerne \ref{eq:inerti_tilt_pan_fak} er de reflekterede inertimomenter ber
 \begin{split}
 {I_{tilt,2}}&=1,57499\cdot{10}^{-4} \text{ [kg m$^2$]}
 \\
-{I_{pan,2}}&=3,15708\cdot{10}^{-4} \text{ [kg m$^2$]}
+{I_{pan,2}}&=4,62172\cdot{10}^{-4} \text{ [kg m$^2$]}
 \end{split}
 \end{align}
