--- a/Rapport/master_doc.tex
+++ b/Rapport/master_doc.tex
@@ -18,6 +18,7 @@
 \include{./content/forord}
 \include{./content/indledning}
 \include{./content/problemformulering}
+\include{./content/kravspecifikation}
 %%%%%%%%%%%% Sektioner %%%%%%%%%%%%
 \include{./content/PTS}
 \include{./content/koordinattransformation}
