--- a/Rapport/content/app_DCmotor.tex
+++ b/Rapport/content/app_DCmotor.tex
@@ -78,7 +78,7 @@ Den målte strøm-spændingskarakteristik for DC-motoren er indtegnet på figur 
 \end{figure}
 Som det ses på figur \ref{fig:resistans0} er sammenhængen mellem strøm og spænding
 tilnærmelsesvis lineær, og en lineær regression på dataene vil altså give en tilnærmet værdi for \(R_m\).
-\(R_m\) er ved lineær regression beregnet til 5,21 \([\Omega]\). \todo{Flere decimaler?}
+\(R_m\) er ved lineær regression beregnet til 5,21 \([\Omega]\). \todo[inline]{Flere decimaler?}
 
 Den i forsøget mindste afsatte effekt i motoren er 48 [mW].
 \subsubsection{Diskussion}
@@ -88,7 +88,7 @@ om ikke andet, så for effektafsættelser i motoren på mindst 48 [mW].
 \subsubsection{Konklusion}
 Motorens ækvivalente resistans, \(R_m\) er vha. sammenhørende målinger af strøm og spænding
 for en rotationslåst motor, ved effektafsættelser i motoren på 48 [mW] og højere,
-blevet bestemt til 5,21 \([\Omega]\). \todo{Flere decimaler?}
+blevet bestemt til 5,21 \([\Omega]\). \todo[inline]{Flere decimaler?}
 \subsection{Eksperiment 2}
 \label{ss:eksperiment2}
 \subsubsection{Formål}
@@ -109,7 +109,7 @@ Transientresponsen for alle strømme og spændingsfald i kredsløbet har denne t
 	\tau=\frac{L_m}{R_m+R_s}
 	\label{eq:rltimeconstant} 
  \end{equation}
-Tidskonstanten er et mål for tiden det tager systemet at opnå ca. 63,2 \% af slutværdien.\todo{D\&B-kilde}
+Tidskonstanten er et mål for tiden det tager systemet at opnå ca. 63,2 \% af slutværdien.\todo[inline]{D\&B-kilde}
 For en (eksponentielt) aftagende kurve med tidskonstanten \(\tau\) kan tidskonstanten aflæses som
 tidsforskellen mellem to niveauer V0 og V1, hvor V1 er ca. 36,8 \% af V0.
 
