tilføjet akse til skeet_diagram

--- a/Rapport/content/problemformulering.tex
+++ b/Rapport/content/problemformulering.tex
@@ -5,7 +5,7 @@ Bolden bevæger sig i et 3D-rum med negligerbar luftmodstand.
 
 \begin{figure}[th!]
 \centering
-\includegraphics[width=1\textwidth]{./graphics/skeet_diagram_cropped}
+\includegraphics[width=1\textwidth]{./graphics/skeet_diagram_cropped_axes}
 \caption[tekst i indholdsfortegnelsen]{figurtekst}
 \label{fig:ES}
 \end{figure}	
@@ -19,7 +19,7 @@ I ES skal rammes serier af duer/mål der afskydes fra
 enten ”High House” eller ”Low House”, og med skud fra hver af de otte stationer langs 
 cirkelperiferien. Dette projekt er afgrænset til et enkelt tilfælde - afskydning fra ”High-House” med PTS placeret på station 4. 
 
-Det kartesiske koordinatsystem har origo ved PTS's origo. PTS's origo er placeret 45 [cm] over jorden. Ved begyndelsen af applikationen er PTS stationært, med både $\phi$ og $\theta$ lig med 0. Dvs. at tilt rammen er parallel med YZ planet. 
+Det kartesiske koordinatsystem har origo banens centrum. Akserne er indtegnet på figur \ref{fig:ES}. PTS's origo er placeret 45 [cm] over jorden. Ved begyndelsen af applikationen er PTS stationært, med både $\phi$ og $\theta$ lig med 0. Dvs. at tilt rammen er parallel med YZ planet. 
 
 Målets parabel er givet ved vektorfunktionen \ref{eq:pf:vektorparabel3d}
 
