Added todolist. Frokostcommit!

--- a/Rapport/content/forkortelser.tex
+++ b/Rapport/content/forkortelser.tex
@@ -10,6 +10,7 @@ PTS = Pan and Tilt System
 \end{itemize}
 
 
+
 \subsection*{Mangler at blive laver/skrevet}
 \begin{itemize}
 \item Problemformulering skal færdiggøres. 
@@ -19,5 +20,7 @@ PTS = Pan and Tilt System
 \item Konklusion
 \item Forord
 \item Indledning
+
+\listoftodos
 
 \end{itemize}
