--- a/Rapport/content/app_DCmotor.tex
+++ b/Rapport/content/app_DCmotor.tex
@@ -177,7 +177,7 @@ over \(R_s\) måles med et oscilloskop.
 Dataene eksporteres og tidskonstanten bestemmes herudfra.
 
 Det anvendte multimeter er af typen TTi 1604,
-og oscilloskopet er af typen \todo{Oscilloskop?}.
+og oscilloskopet er af typen Agilent Technologies DSO-X 2024A.
 
 \paragraph{Metode 2}
 En modstand \(R_{s1}\) måles efter med et multimeter og forbindes i serie med DC-motoren
@@ -359,7 +359,7 @@ Når rotoren har opnået en given vinkelhastighed, og snorkraften stopper,
 vil rotoren decelerere med en vinkelacceleration \(\alpha_{ned}\), som skyldes friktionskraftmomentet,
 jf. ligning \ref{eq:Tf0}.
 \begin{equation}
-	\|T_f\|=J_m\left|\alpha{ned}\right|
+	\left|T_f\right|=J_m\left|\alpha{ned}\right|
 	\label{eq:Tf0}
  \end{equation}
 
