Tilføjet kilde, Matlab motorposition

--- a/Rapport/litteraturliste.bib
+++ b/Rapport/litteraturliste.bib
@@ -100,7 +100,12 @@ url = {http://www.robot-electronics.co.uk/htm/emg30.htm}
 
 
 
-
+@ONLINE{matlabmodel,
+author = {{MATLAB\textregistered 7.14}},
+title = {DC Motor Position: System Modeling},
+year = {2012},
+url = {http://ctms.engin.umich.edu/CTMS/index.php?example=MotorPosition&section=SystemModeling}
+}
 
 
 
