--- a/Rapport/content/app_DCmotor.tex
+++ b/Rapport/content/app_DCmotor.tex
@@ -32,7 +32,10 @@ Kraftmomentet kan altså udtrykkes ved ligning \ref{eq:Tm_leveret}
 	\label{eq:Tm_leveret} 
  \end{equation}
 
-Proportionalitetskonstanterne \(K_b\) og \(K_t\) har i SI-enheder samme numeriske værdi\todo{KILDE!}.
+Proportionalitetskonstanterne \(K_b\) og \(K_t\) har i SI-enheder samme numeriske værdi \citep{matlabmodel}
+
+
+
 
 \subsection{Eksperiment 1}
 \label{ss:eksperiment1}
