--- a/Rapport/content/problemformulering.tex
+++ b/Rapport/content/problemformulering.tex
@@ -21,7 +21,7 @@ cirkelperiferien. Dette projekt er afgrænset til et enkelt tilfælde - afskydni
 
 Det kartesiske koordinatsystem har origo på banens centrum. Akserne er indtegnet på figur \ref{fig:ES}. PTS's origo er placeret 45 [cm] over jorden. Ved begyndelsen af applikationen er PTS stationært, med både $\phi$ og $\theta$ lig med 0. Dvs. at tilt rammen er parallel med YZ planet. 
 
-Målets parabel er givet ved vektorfunktionen \ref{eq:pf:vektorparabel3d}
+Målets parabel er givet ved vektorfunktionen \ref{eq:pf:vektorparabel3d}. \todo[author=Anders,inline]{Denne henvosning skal rettes}
 \todo[inline, author=Michael]{Ved ikke om den skal med allerede her?}
 \begin{equation}
 Pos\left( t \right) = 
